--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -1,10 +1,9 @@
- /* =============== styles ================= */
 html {
     scroll-behavior: smooth;
-  }
+}
 
 body {
-    background: #161616;
+    color: #161616;
 }
 
 a {
